--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "vaadin-date-picker",
-  "version": "0.0.0",
-  "author": "Vaadin Ltd",
-  "license": "Apache-2.0",
+  "name": "gl-date-picker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/9lon/gl-date-picker.git"
+  },
+  "author": "kitz-Parnupat",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/9lon/gl-date-picker/issues"
+  },
+  "homepage": "https://github.com/9lon/gl-date-picker#readme",
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.0",
-    "@angular/compiler": "^2.0.0-rc.0",
-    "@angular/core": "^2.0.0-rc.0",
-    "@angular/platform-browser": "^2.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.0",
-    "@vaadin/angular2-polymer": "^1.0.0-alpha5",
-    "chalk": "^1.1.1",
-    "es6-shim": "^0.35.0",
-    "gulp": "latest",
-    "gulp-html-extract": "0.0.3",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.0",
-    "gulp-typings": "^1.3.4",
-    "jshint": "^2.8.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "web-component-tester": "^4.1.0",
-    "yargs": "^3.27.0",
-    "zone.js": "^0.6.12"
+    "gulp": "^3.9.1",
+    "gulp-replace": "^0.5.4"
   }
 }
